tweak kitty config, readme, extra udevmon.yaml

--- a/home.config/kitty/kitty.conf
+++ b/home.config/kitty/kitty.conf
@@ -1,35 +1,88 @@
-font_family      JetBrainsMono Nerd Font Mono 
-cursor_blink_interval     0
+cursor_blink_interval 0
+wayland_titlebar_color background
+linux_display_server X11
+# The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
+window_border_width 1
+# The window margin (in pts) (blank area outside the border)
+window_margin_width 4
+# The window padding (in pts) (blank area between the text and the window border)
+window_padding_width 1
+update_check_interval 0
+# remember_window_size no
+# initial_window_width 900
+# initial_window_height 600
+
+symbol_map U+e000-U+f8ff 3270 Nerd Font
+symbol_map U+f0000-U+ffffd 3270 Nerd Font
+symbol_map U+100000-U+10fffd 3270 Nerd Font
+
+font_size 21.0
 
 # The cursor shape can be one of (block, beam, underline)
 # cursor_shape     beam
 cursor_shape     block
 
-background #232731
-font_size 22.0
-color0  #4C566A
-color8  #4C566A
-color1  #bf616a
-color9  #bf616a
-color2  #A3BE8C
-color10 #A3BE8C
-color3  #C68A75
-color11 #D7BA7D
-color4  #5e81ac
-color12 #5e81ac
-color5  #B48EAD
-color13 #B48EAD
-color6  #88c0d0
-color14 #88c0d0
-color7  #D8DEE9
-color15 #D8DEE9
+# font_family Monolisa Nerd Font
+# font_family FiraCode Nerd Font Mono
+font_family JetBrainsMono Nerd Font Mono
 
-# The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
-window_border_width 1
+# font_features FiraCodeNFM-Reg ss02
+# font_features FiraCodeNFM-Med ss02 
+# font_features FiraCodeNF-Ret ss02 
 
-# The window margin (in pts) (blank area outside the border)
-window_margin_width 0
+background #1e1e1e
+foreground #c8c8c8
 
-# The window padding (in pts) (blank area between the text and the window border)
-window_padding_width 1
+color0  #1E1E1E
+color8  #545c7e
+color1  #b2555b
+color9  #b2555b
+color2  #A6E3A1
+color10 #A6E3A1
+color3  #ff9e64
+color11 #e0af68
+color4  #6a92d7
+color12 #6a92d7 
+color5  #bb9af7
+color13 #bb9af7
+color6  #7ccdfd
+color14 #7ccdfd
+color7  #c0caf5
+color15 #c0caf5
+
+# background #232731
+
+# color0  #4C566A
+# color8  #4C566A
+# color1  #bf616a
+# color9  #bf616a
+# color2  #A3BE8C
+# color10 #A3BE8C
+# color3  #C68A75
+# color11 #D7BA7D
+# color4  #5e81ac
+# color12 #5e81ac
+# color5  #B48EAD
+# color13 #B48EAD
+# color6  #88c0d0
+# color14 #88c0d0
+# color7  #D8DEE9
+# color15 #D8DEE9
+
+## Tab Bar
+tab_bar_edge top
+tab_bar_style fade
+tab_fade 0 1 1 1
+
+active_tab_foreground   #c8c8c8
+active_tab_background   #303030
+active_tab_font_style   bold
+inactive_tab_foreground #808080
+inactive_tab_background #252525
+inactive_tab_font_style normal
+
+map ctrl+t new_tab
+map ctrl+w close_tab
+map ctrl+k next_tab
+map ctrl+j previous_tab
 
