--- a/home.config/wayfire.ini
+++ b/home.config/wayfire.ini
@@ -1,3 +1,7 @@
+# This config leans heavily on https://github.com/bluebyt/Wayfire-dots
+# It is amalgamated with the Raspberry Pi default configs to run on RPiOS 
+# A Work In Progress by https://github.com/gnmearacaun/rpios-wayfirewm 
+
 [command]
 #───────────────────────────────────────────────────────────────
 # RPiOS ───────────────────────────────────────────────────────────────
@@ -32,7 +36,7 @@ command_power = pwrkey
 # https://github.com/alacritty/alacritty
 binding_terminal = <super> KEY_ENTER
 command_terminal = alacritty
-# command_terminal = blackbox
+# command_terminal = kitty
 
 # Start your launcher
 # https://hg.sr.ht/~scoopta/wofi
