--- a/home.config/ranger/rc.conf
+++ b/home.config/ranger/rc.conf
@@ -1,47 +1,46 @@
-# BOD
-
 map cW bulkrename %s
-map x shell mv -t /home/briain/.trash %s
+# move to trash
+map x shell mv -t $HOME/.trash %s
 map g? cd /usr/share/doc/ranger
-map ga cd /home/briain/media/articles
-map gb cd /home/briain/media/books
-map gc cd /home/briain/.config
-map gC cd /home/briain/.config
-map gd cd /home/briain/downloads
-map gD cd /home/briain/documents
-map ge cd /home/briain/.config/nvim
+map ga cd $HOME/media/articles
+map gb cd $HOME/media/books
+map gc cd $HOME/.config
+map gC cd $HOME/.config
+map gd cd $HOME/downloads
+map gD cd $HOME/documents
+map ge cd $HOME/.config/nvim
 map gf cd ~/.config/function
-map gG cd /home/briain/.local/repos
+map gG cd $HOME/.local/repos
 map gh cd ~
-# map gH cd ~/home/briain/media/photo
+# map gH cd $HOME/media/photo
 map gi cd ~/.config/nvim 
 # map gI eval fm.cd('/run/media/' + os.getenv('USER'))
 map gI cd -r %f
-# map gj cd /home/briain/.local/bin/jupyter
-# map gk cd /home/briain/.kodi
+# map gj cd $HOME/.local/bin/jupyter
+# map gk cd $HOME/.kodi
 map gk cd ~/.local/git
-map gl cd /home/briain/.config/lvim
+map gl cd $HOME/.config/lvim
 map gL cd ~/.local/share/lunarvim/lvim
 # map gL cd -r %f
 map gm cd /run/media/briain
-map gM cd /home/briain/media/music
+map gM cd $HOME/media/music
 map gN cd ~/.local/share/nvim
 map go cd /opt
-map gp cd /home/briain/.local/share/lunarvim/site/pack/packer
-map gP cd /home/briain/.local/share/nvim/site/pack/packer
+map gp cd $HOME/.local/share/lunarvim/site/pack/packer
+map gP cd $HOME/.local/share/nvim/site/pack/packer
 map gq cd /usr/share/doc
 map gr cd ~/.config/ranger 
 map gR eval fm.cd(ranger.RANGERDIR)
-map gs cd /home/briain/scripts/stow
+map gs cd $HOME/scripts/stow
 map gS cd ~/.scripts
 map gT cd /tmp
 map gt cd ~/.trash
 map gu cd /usr
-#map gu cd /home/briain/media/music
+#map gu cd $HOME/media/music
 map gV cd ~/scripts/vimwiki
 map gv cd /var
 map gw cd ~/.config/hypr
-# map gw cd /home/briain/scripts/
+# map gw cd $HOME/scripts/
 # TODO gy to random directory on system
 map gx cd ~/.trash
 # map gy cd ~/.tldr/cache/pages/common
