--- a/home.config/wayfire.ini
+++ b/home.config/wayfire.ini
@@ -45,7 +45,7 @@ binding_slurp = <ctrl> KEY_SYSRQ
 command_slurp = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
 
 [core]
-plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions zoom winshadows follow-focus scale ipc ipc-rules foreign-toplevel wf-info background-view wsets shortcuts-inhibit water winzoom wobbly mag workspace-names 
+plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions zoom winshadows follow-focus scale ipc ipc-rules foreign-toplevel wf-info background-view wsets shortcuts-inhibit water winzoom wobbly mag workspace-names join_views 
 plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions wrot
 xwayland = true
 only_decorate_gtk = true
@@ -336,7 +336,6 @@ rule_015 = on created if app_id is "firefox" then assign_workspace 1 1
 rule_093 = on created if app_id is "brave-browser-beta" then set alpha 1.0
 rule_094 = on created if app_id is "brave-browser-beta" then assign_workspace 1 0
 
-
 [background-view]
 command = mpv --loop=inf
 file =
@@ -354,7 +353,6 @@ mode = random
 
 [preserve-output]
 last_output_focus_timeout = 10000
-
 
 [simple-tile]
 button_move = <super> BTN_LEFT
