add to wayfire.ini

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -3,11 +3,14 @@
 # It's a Work In Progress by https://github.com/gnmearacaun/rpios-wayfirewm 
 
 # [autostart]
-# default is false on the Pi
+# Pi default 
 autostart_wf_shell = false
+# set a random wallpaper
+pcmanfm --set-wallpaper "find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image"
 # background = find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image
+
+# You can try `ddcutil` and check if your monitor has an option for changing color temp.
 # redshift = redshift -m wayland
-# wallpaper = wpaperd -o ~/.config/wpaperd/output.conf
 
 [command]
 #───────────────────────────────────────────────────────────────
@@ -36,16 +39,36 @@ binding_terminal = <super> KEY_ENTER
 command_terminal = alacritty
 binding_changewallpaper = <super> KEY_W
 command_changewallpaper = find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image
-# binding_clipman = <super> key_h
 
 # Screenshots
-binding_screenshot = KEY_SYSRQ
+binding_screenshot = KEY_SYSRQ | KEY_PRINT
 command_screenshot = grim $HOME/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
-binding_slurp = <ctrl> KEY_SYSRQ
-command_slurp = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
+binding_screenshot_interactive = <alt> KEY_SYSRQ | <alt> KEY_PRINT
+command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
+# If you've got notifications working, you can tack on this to the end of previous commands 
+# && notify-send -i "camera" 'screenshot' 'saved in ~/media/photos/screenshots'
+# Capture a screenshot to clipboard 
+binding_screenshot_clip = <super> <ctrl> KEY_S
+command_screenshot_clip = grim -g \"$(slurp)" - | wl-copy
+
+# Experimental
+binding_clipman = <super> KEY_H
+command_clipman= clipman
+binding_launcher = <super> KEY_D 
+command_launcher = wofi
+repeatable_binding_brightness_down = KEY_BRIGHTNESSDOWN
+repeatable_binding_volume_down = KEY_VOLUMEDOWN
+repeatable_binding_brightness_up = KEY_BRIGHTNESSUP
+repeatable_binding_volume_up = KEY_VOLUMEUP
+# Media keys
+command_media-next = playerctl next
+command_media-play-pause = playerctl play-pause
+command_media-prev = playerctl previous
+command_media-stop = playerctl stop
+command_mute = amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 > $SWAYSOCK.wob
 
 [core]
-plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions zoom winshadows follow-focus scale ipc ipc-rules foreign-toplevel wf-info background-view wsets shortcuts-inhibit water winzoom wobbly mag workspace-names join_views 
+plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions zoom winshadows follow-focus scale ipc ipc-rules foreign-toplevel wf-info background-view wsets shortcuts-inhibit water winzoom wobbly mag workspace-names join_views decoration 
 plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions wrot
 xwayland = true
 only_decorate_gtk = true
@@ -344,7 +367,10 @@ file =
 
 [output]
 mode = auto
+#mode = 1920x1080@60.000000 # or just 1920x1080
+# Kanshi supports more dynamic configuration, like switching profiles based on connected outputs. See [tutorial](https://github.com/WayfireWM/wayfire/wiki/Tutorial)
 position = auto
+# try setting scale to 1.5 for larger fonts
 scale = 1.000000
 transform = normal
 
@@ -355,23 +381,31 @@ mode = random
 last_output_focus_timeout = 10000
 
 [simple-tile]
-button_move = <super> BTN_LEFT
-button_resize = <super> BTN_RIGHT
-inner_gap_size = 5
 keep_fullscreen_on_adjacent = true
+key_toggle = <super> <alt> KEY_T
+tile_by_default = all
 key_focus_above = <super> <alt> KEY_K
 key_focus_below = <super> <alt> KEY_J
 key_focus_left = <super> <alt> KEY_H
 key_focus_right = <super> <alt> KEY_L
-key_toggle = <super> <alt> KEY_T
+button_move = <super> BTN_LEFT
+button_resize = <super> BTN_RIGHT
+inner_gap_size = 10
 outer_horiz_gap_size = 0
 outer_vert_gap_size = 0
-tile_by_default = all
 
 # [switcher]
-# gesture_toggle = edge-swipe down 3
-# next_view = <alt> KEY_TAB
-# prev_view = <alt> <shift> KEY_TAB
-# speed = 500
-# touch_sensitivity = 1.000000
-# view_thumbnail_scale = 1.000000
+next_view = <alt> KEY_TAB
+prev_view = <alt> <shift> KEY_TAB
+
+# Move the focused window with the same key-bindings, but add ctrl.
+with_win_left = <super> <ctrl> KEY_A
+with_win_down = <super> <ctrl> KEY_S
+with_win_up = <super> <ctrl> KEY_W
+with_win_right = <super> <ctrl> KEY_D
+
+[decoration]
+title_height =  0
+active_color = 0.5 1 0.8 1
+inactive_color = 0.1 0.1 0.1 1
+#ignore_views = title contains "this_word"
