--- a/wayfire.ini
+++ b/wayfire.ini
@@ -1,16 +1,6 @@
-# This config borrows from https://github.com/bluebyt/Wayfire-dots
+# It's a Work In Progress at https://github.com/gnmearacaun/rpios-wayfirewm 
+# This config borrows from https://github.com/bluebyt/Wayfire-dots and that of catchyosj
 # It is amalgamated with the Raspberry Pi default configs to run on RPiOS ( Pi4&5 only) 
-# It's a Work In Progress by https://github.com/gnmearacaun/rpios-wayfirewm 
-
-# [autostart]
-# Pi default 
-autostart_wf_shell = false
-# set a random wallpaper
-pcmanfm --set-wallpaper "find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image"
-# background = find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image
-
-# You can try `ddcutil` and check if your monitor has an option for changing color temp.
-# redshift = redshift -m wayland
 
 [command]
 #───────────────────────────────────────────────────────────────
@@ -29,8 +19,6 @@ binding_bluetooth = <super> <shift> KEY_B
 command_bluetooth = wfpanelctl bluetooth menu
 binding_netman = <super> <shift> KEY_N
 command_netman = wfpanelctl netman menu
-# binding_orca = <ctrl> <alt> KEY_SPACE
-# command_orca = gui-pkinst orca reboot
 binding_quit = <ctrl> <alt> KEY_DELETE
 command_quit = lxde-pi-shutdown-helper
 binding_power = KEY_POWER
@@ -45,31 +33,10 @@ binding_screenshot = KEY_SYSRQ | KEY_PRINT
 command_screenshot = grim $HOME/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
 binding_screenshot_interactive = <alt> KEY_SYSRQ | <alt> KEY_PRINT
 command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
-# If you've got notifications working, you can tack on this to the end of previous commands 
-# && notify-send -i "camera" 'screenshot' 'saved in ~/media/photos/screenshots'
-# Capture a screenshot to clipboard 
-binding_screenshot_clip = <super> <ctrl> KEY_S
-command_screenshot_clip = grim -g \"$(slurp)" - | wl-copy
-
-# Experimental
-binding_clipman = <super> KEY_H
-command_clipman= clipman
-binding_launcher = <super> KEY_D 
-command_launcher = wofi
-repeatable_binding_brightness_down = KEY_BRIGHTNESSDOWN
-repeatable_binding_volume_down = KEY_VOLUMEDOWN
-repeatable_binding_brightness_up = KEY_BRIGHTNESSUP
-repeatable_binding_volume_up = KEY_VOLUMEUP
-# Media keys
-command_media-next = playerctl next
-command_media-play-pause = playerctl play-pause
-command_media-prev = playerctl previous
-command_media-stop = playerctl stop
-command_mute = amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 > $SWAYSOCK.wob
 
 [core]
-plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions zoom winshadows follow-focus scale ipc ipc-rules foreign-toplevel wf-info background-view wsets shortcuts-inhibit water winzoom wobbly mag workspace-names join_views decoration 
-plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions wrot
+plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit simple-tile water wf-info winshadows winzoom wobbly workspace-names wsets zoom 
+plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions 
 xwayland = true
 only_decorate_gtk = true
 focus_button_with_modifiers = false
@@ -82,24 +49,18 @@ vwidth = 3
 vheight = 3
 
 # Windows ──────────────────────────────────────────────────────────────────────
-# Actions related to window management functionalities.
 [wm-actions]
+# Actions related to window management functionalities.
 toggle_maximize = <super> KEY_F
 toggle_fullscreen = <super> <shift> KEY_F
 toggle_showdesktop = <super> <shift> KEY_D
 toggle_always_on_top = <super> KEY_Y
 toggle_sticky = <super> <shift> KEY_Y
-# Quickly cycle between applications
-send_to_back = <super> KEY_B | <super> KEY_S
+# Quickly cycle between applications, may need to press multiple times to regain focus as it seem to cycle focu through all windows
+send_to_back = <super> KEY_B | <super> KEY_D
 
-# Position the windows in certain regions of the output as tiles
-# Alt-Esc default binding for moving between windows/tiles
 [grid]
-#
-# ⇱ ↑ ⇲   │ 7 8 9
-# ← f →   │ 4 5 6
-# ⇱ ↓ ⇲ d │ 1 2 3 0
-# ‾   ‾
+# Position the windows in certain regions of the output as tiles
 slot_l = <super> <shift> KEY_H | <alt> KEY_H
 slot_c = <super> <shift> KEY_K | <alt> KEY_K
 slot_r = <super> <shift> KEY_L | <alt> KEY_L
@@ -108,19 +69,16 @@ restore = <super> <shift> KEY_J | <alt> KEY_J
 mouse_snap = false
 duration = 300
 type = crossfade
+# Alt-Esc default binding for moving between windows/tiles
 
 # Workspaces ───────────────────────────────────────────────────────────────────
-# Switch to workspace.
 [vswitch]
+# Switch to workspace.
 binding_left = <super> KEY_H
 binding_down = <super> KEY_J
 binding_up = <super> KEY_K
 binding_right = <super> KEY_L
 wraparound = false
-binding_win_down = <ctrl> <shift> <super> KEY_DOWN
-binding_win_left = <ctrl> <shift> <super> KEY_LEFT
-binding_win_right = <ctrl> <shift> <super> KEY_RIGHT
-binding_win_up = <ctrl> <shift> <super> KEY_UP
 # TODO
 # binding_last = 
 # duration = 300
@@ -131,32 +89,42 @@ binding_win_up = <ctrl> <shift> <super> KEY_UP
 # send_win_right = 
 # send_win_up = 
 # with_win_last = 
+# move to a workspace directly, doesn't work so far
+binding_0 = <super> KEY_0
+binding_1 = <super> KEY_1
+binding_2 = <super> KEY_2
+binding_3 = <super> KEY_3
+binding_4 = <super> KEY_4
+binding_5 = <super> KEY_5
+binding_6 = <super> KEY_6
+binding_7 = <super> KEY_7
+binding_8 = <super> KEY_8
+binding_9 = <super> KEY_9
 
-# Show an overview of all workspaces.
-# Workspaces are arranged into a grid of 3 × 3.
-# The numbering is left to right, line by line.
-[expo]
-toggle = <super> KEY_A | hotspot left-top 10x10 200
-# Select a workspace.
-select_workspace_1 = KEY_1
-select_workspace_2 = KEY_2
-select_workspace_3 = KEY_3
-select_workspace_4 = KEY_4
-select_workspace_5 = KEY_5
-select_workspace_6 = KEY_6
-select_workspace_7 = KEY_7
-select_workspace_8 = KEY_8
-select_workspace_9 = KEY_9
-duration = 300
-inactive_brightness = 0.700000
-keyboard_interaction = true
-offset = 10
-transition_length = 200
+[switcher]
+# Cycle through windows on workspae 
+next_view = <super> KEY_TAB
+prev_view = <super> <shift> KEY_TAB
 
-# Show current windows exploded on current workspace (P) or entire desktop (E), traverse with arrow keys
+[simple-tile]
+keep_fullscreen_on_adjacent = true
+Break a tile into its own window, to maximize and on
+key_toggle = <super> KEY_I
+button_move = <super> BTN_LEFT
+button_resize = <super> BTN_RIGHT
+inner_gap_size = 5
+outer_horiz_gap_size = 0
+outer_vert_gap_size = 0
+tile_by_default = all
+key_focus_above = <super> <alt> KEY_K
+key_focus_below = <super> <alt> KEY_J
+key_focus_left = <super> <alt> KEY_H | <super> KEY_U
+key_focus_right = <super> <alt> KEY_L | <super> KEY_P
+
 [scale]
-toggle = <super> KEY_Z
-toggle_all = <super> KEY_X
+# Show current windows exploded on current workspace (X) or entire desktop (Z), traverse with arrow keys
+toggle = <super> KEY_X
+toggle_all = <super> KEY_Z
 allow_zoom = false
 bg_color = \#1A1A1AE6
 duration = 400
@@ -164,20 +132,76 @@ inactive_alpha = 0.750000
 include_minimized = false
 interact = false
 middle_click_close = false
-minimized_alpha = 0.450000
+minimized_alpha = 0.4500
 spacing = 50
 text_color = \#CCCCCCFF
 title_font_size = 22
 title_overlay = all
 title_position = center
 
-[scale-title-filter]
-bg_color = \#00000080
-case_sensitive = false
-font_size = 30
-overlay = true
-share_filter = false
-text_color = \#CCCCCCCC
+[window-rules]
+maximize_alacritty = on created if app_id is "Alacritty" then maximize
+maximize_lxterminal= on created if app_id is "lxterminal" then maximize
+# You can get the properties of your applications with the following command:
+# $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
+# See Window rules for a complete reference.
+# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
+rule_001 = on created if app_id is "lxterminal" then set alpha 0.7
+rule_002 = on created if app_id is "Alacritty" then set alpha 0.75
+rule_003= on created if app_id is "firefox" then maximize
+rule_004= on created if app_id is "firefox" then set alpha 0.8
+rule_005= on created if app_id is "firefox" then assign_workspace 1 1
+rule_006= on created if app_id is "brave-browser-beta" then set alpha 1.0
+rule_007= on created if app_id is "brave-browser-beta" then assign_workspace 1 0
+# rule_008= on created if app_id is "brave-browser-beta" then move 270 70
+
+# Mouse bindings ───────────────────────────────────────────────────────────────
+
+# Resize them with right mouse button + Super.
+[resize]
+activate = <super> BTN_RIGHT
+activate_preserve_aspect = none
+
+# Drag windows by holding down Super and left mouse button.
+[move]
+activate = <super> BTN_LEFT
+enable_snap = true
+enable_snap_off = true
+join_views = false
+preview_base_border = \#404080CC
+preview_base_color = \#8080FF80
+preview_border_width = 3
+quarter_snap_threshold = 50
+snap_off_threshold = 200
+snap_threshold = 10
+workspace_switch_after = -1
+
+# Zoom in the desktop by scrolling + Super.
+[zoom]
+modifier = <super> 
+interpolation_method = 0
+smoothing_duration = 300
+speed = 0.010000
+
+# Change opacity by scrolling with Super + Alt.
+[alpha]
+modifier = <super> <alt>
+min_value = 0.100000
+
+[output]
+mode = auto
+#mode = 1920x1080@60.000000 # or just 1920x1080
+# Kanshi supports more dynamic configuration, like switching profiles based on connected outputs. See [tutorial](https://github.com/WayfireWM/wayfire/wiki/Tutorial)
+position = auto
+# try setting scale to 1.5 for larger fonts
+scale = 1.000000
+transform = normal
+
+[oswitch]
+# Switch to the next output.
+next_output = <super> KEY_O
+# Same with the window.
+next_output_with_win = <super> <shift> KEY_O
 
 [idle]
 # -1 is disabled or set with number of seconds
@@ -194,28 +218,38 @@ cube_zoom_speed = 1000
 disable_on_fullscreen = false
 disable_initially = false
 
-[focus-steal-prevent]
-cancel_keys = KEY_ENTER
-deny_focus_views = none
-timeout = 1000
+# Invert the colors of the whole output.
+[invert]
+toggle = none
 
-[follow-focus]
-change_output = true
-change_view = true
-focus_delay = 50
-raise_on_top = true
-threshold = 10
+# Show an overview of all workspaces.
+[expo]
+toggle = <super> KEY_A | hotspot left-top 10x10 200
+# Drag a window into a different workpace with mouse left-button
+# Select a workspace.
+select_workspace_1 = KEY_1
+select_workspace_2 = KEY_2
+select_workspace_3 = KEY_3
+select_workspace_4 = KEY_4
+select_workspace_5 = KEY_5
+select_workspace_6 = KEY_6
+select_workspace_7 = KEY_7
+select_workspace_8 = KEY_8
+select_workspace_9 = KEY_9
+duration = 300
+inactive_brightness = 0.700000
+keyboard_interaction = true
+offset = 10
+transition_length = 200
 
-[oswitch]
-# Switch to the next output.
-next_output = <super> KEY_O
-# Same with the window.
-next_output_with_win = <super> <shift> KEY_O
 
-# Change opacity by scrolling with Super + Alt.
-[alpha]
-modifier = <super> <alt>
-min_value = 0.100000
+[scale-title-filter]
+bg_color = \#00000080
+case_sensitive = false
+font_size = 30
+overlay = true
+share_filter = false
+text_color = \#CCCCCCCC
 
 [input]
 xkb_model = pc105
@@ -230,87 +264,7 @@ kb_capslock_default_state = false
 kb_repeat_delay = 400
 kb_repeat_rate = 40
 
-[animate]
-close_animation = fade
-duration = 400
-enabled_for = (type equals "toplevel" | (type equals "x-or" & focusable equals true))
-fade_duration = 800
-fade_enabled_for = type equals "overlay"
-fire_color = \#b22303ff
-fire_duration = 300
-fire_enabled_for = none
-fire_particle_size = 16.000000
-fire_particles = 2000
-# open_animation = zoom
-open_animation = fade
-random_fire_color = true
-startup_duration = 600
-zoom_duration = 500
-zoom_enabled_for = none
-
-# Alert: blur consumes system resources
-# [blur]
-# blur_by_default = type is "toplevel"
-# bokeh_degrade = 1
-# bokeh_iterations = 15
-# bokeh_offset = 5.000000
-# box_degrade = 1
-# box_iterations = 2
-# box_offset = 1.000000
-# gaussian_degrade = 1
-# gaussian_iterations = 2
-# gaussian_offset = 1.000000
-# kawase_degrade = 8
-# kawase_iterations = 2
-# kawase_offset = 2.000000
-# method = gaussian
-# saturation = 1.000000
-# toggle = none
-
-[mag]
-default_height = 500
-toggle = <super> <shift> KEY_M
-zoom_level = 75
-
-# Mouse bindings ───────────────────────────────────────────────────────────────
-# Drag windows by holding down Super and left mouse button.
-[move]
-activate = <super> BTN_LEFT
-enable_snap = true
-enable_snap_off = true
-join_views = false
-preview_base_border = \#404080CC
-preview_base_color = \#8080FF80
-preview_border_width = 3
-quarter_snap_threshold = 50
-snap_off_threshold = 200
-snap_threshold = 10
-workspace_switch_after = -1
-
-# Resize them with right mouse button + Super.
-[resize]
-activate = <super> BTN_RIGHT
-activate_preserve_aspect = none
-
-[water]
-activate = <ctrl> <super> BTN_LEFT
-
-[wf-info]
-
-[winzoom]
-dec_x_binding = <ctrl> <super> KEY_LEFT
-dec_y_binding = <ctrl> <super> KEY_UP
-inc_x_binding = <ctrl> <super> KEY_RIGHT
-inc_y_binding = <ctrl> <super> KEY_DOWN
-modifier = <ctrl> <super>
-nearest_filtering = false
-preserve_aspect = true
-zoom_step = 0.100000
-
-[wobbly]
-friction = 3.000000
-grid_resolution = 6
-spring_k = 8.000000
+# Misc  ───────────────────────────────────────────────────────────────
 
 [workarounds]
 all_dialogs_modal = true
@@ -331,81 +285,62 @@ position = center
 show_option_names = false
 text_color = \#FFFFFFFF
 
-[wsets]
-label_duration = 2000
-#
-[xdg-activation]
-
-# Zoom in the desktop by scrolling + Super.
-[zoom]
-modifier = <super> 
-interpolation_method = 0
-smoothing_duration = 300
-speed = 0.010000
-
-[window-rules]
-maximize_alacritty = on created if app_id is "Alacritty" then maximize
-maximize_lxterminal= on created if app_id is "lxterminal" then maximize
-# You can get the properties of your applications with the following command:
-# $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
-# See Window rules for a complete reference.
-# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
-rule_005 = on created if app_id is "lxterminal" then set alpha 0.7
-rule_008 = on created if app_id is "Alacritty" then set alpha 0.7
-rule_013 = on created if app_id is "firefox" then maximize
-rule_014 = on created if app_id is "firefox" then set alpha 0.8
-rule_015 = on created if app_id is "firefox" then assign_workspace 1 1
-# rule_092 = on created if app_id is "brave-browser-beta" then move 270 70
-rule_093 = on created if app_id is "brave-browser-beta" then set alpha 1.0
-rule_094 = on created if app_id is "brave-browser-beta" then assign_workspace 1 0
-
-[background-view]
-command = mpv --loop=inf
-file =
-
-[join-views]
-
-[output]
-mode = auto
-#mode = 1920x1080@60.000000 # or just 1920x1080
-# Kanshi supports more dynamic configuration, like switching profiles based on connected outputs. See [tutorial](https://github.com/WayfireWM/wayfire/wiki/Tutorial)
-position = auto
-# try setting scale to 1.5 for larger fonts
-scale = 1.000000
-transform = normal
-
 [place]
 mode = random
 
 [preserve-output]
 last_output_focus_timeout = 10000
 
-[simple-tile]
-keep_fullscreen_on_adjacent = true
-key_toggle = <super> <alt> KEY_T
-tile_by_default = all
-key_focus_above = <super> <alt> KEY_K
-key_focus_below = <super> <alt> KEY_J
-key_focus_left = <super> <alt> KEY_H
-key_focus_right = <super> <alt> KEY_L
-button_move = <super> BTN_LEFT
-button_resize = <super> BTN_RIGHT
-inner_gap_size = 10
-outer_horiz_gap_size = 0
-outer_vert_gap_size = 0
-
-# [switcher]
-next_view = <alt> KEY_TAB
-prev_view = <alt> <shift> KEY_TAB
-
-# Move the focused window with the same key-bindings, but add ctrl.
-with_win_left = <super> <ctrl> KEY_A
-with_win_down = <super> <ctrl> KEY_S
-with_win_up = <super> <ctrl> KEY_W
-with_win_right = <super> <ctrl> KEY_D
-
 [decoration]
 title_height =  0
 active_color = 0.5 1 0.8 1
 inactive_color = 0.1 0.1 0.1 1
 #ignore_views = title contains "this_word"
+
+[focus-steal-prevent]
+cancel_keys = KEY_ENTER
+deny_focus_views = none
+timeout = 1000
+
+[follow-focus]
+change_output = true
+change_view = true
+focus_delay = 50
+raise_on_top = true
+threshold = 10
+
+# [wobbly]
+# friction = 3.000000
+# grid_resolution = 6
+# spring_k = 8.000000
+
+[animate]
+close_animation = fade
+duration = 400
+enabled_for = (type equals "toplevel" | (type equals "x-or" & focusable equals true))
+fade_duration = 800
+fade_enabled_for = type equals "overlay"
+open_animation = zoom
+# open_animation = fade
+startup_duration = 600
+zoom_duration = 500
+zoom_enabled_for = none
+
+# Alert: blur consumes system resources
+[blur]
+blur_by_default = type is "toplevel"
+bokeh_degrade = 1
+bokeh_iterations = 15
+bokeh_offset = 5.000000
+box_degrade = 1
+box_iterations = 2
+box_offset = 1.000000
+gaussian_degrade = 1
+gaussian_iterations = 2
+gaussian_offset = 1.000000
+kawase_degrade = 8
+kawase_iterations = 2
+kawase_offset = 2.000000
+method = gaussian
+saturation = 1.000000
+toggle = none
