--- a/wayfire.ini
+++ b/wayfire.ini
@@ -1,7 +1,8 @@
-# It's a Work In Progress at https://github.com/gnmearacaun/rpios-wayfirewm 
-# This config borrows from https://github.com/bluebyt/Wayfire-dots and that of catchyosj
-# It is amalgamated with the Raspberry Pi default configs to run on RPiOS ( Pi4&5 only) 
+# By https://github.com/gnmearacaun/rpios-wayfirewm
+# Borrows from https://github.com/bluebyt/Wayfire-dots and that of Catchyos
+# It is amalgamated with Raspberry Pi OS default configs for Pi4 & Pi5 
 
+#───────────────────────────────────────────────────────────────
 [command]
 #───────────────────────────────────────────────────────────────
 repeatable_binding_volume_up = KEY_VOLUMEUP
@@ -10,9 +11,8 @@ repeatable_binding_volume_down = KEY_VOLUMEDOWN
 command_volume_down = wfpanelctl volumepulse vold
 binding_mute = KEY_MUTE
 command_mute = wfpanelctl volumepulse mute
-# launch apps by typing name, tab completion
-binding_menu = <super> KEY_R
-command_menu = wfpanelctl smenu menu
+binding_launcher= <super> KEY_R
+command_launcher= wfpanelctl smenu menu
 binding_lxterminal = <super> KEY_T
 command_lxterminal = lxterminal
 binding_bluetooth = <super> <shift> KEY_B
@@ -27,16 +27,15 @@ binding_terminal = <super> KEY_ENTER
 command_terminal = alacritty
 binding_changewallpaper = <super> KEY_W
 command_changewallpaper = find -L $HOME/media/photos/wallpapers -type f | sort -R | head -n 1 | xargs swaybg --image
-
-# Screenshots
 binding_screenshot = KEY_SYSRQ | KEY_PRINT
 command_screenshot = grim $HOME/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
 binding_screenshot_interactive = <alt> KEY_SYSRQ | <alt> KEY_PRINT
 command_screenshot_interactive = slurp | grim -g - ~/media/photos/screenshots/$(date "+%Y-%m-%d-%H:%M").webp
 
 [core]
-plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit simple-tile water wf-info winshadows winzoom wobbly workspace-names wsets zoom 
-plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions 
+plugins = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle invert move oswitch place resize switcher vswitch window-rules wm-actions background-view blur decoration follow-focus foreign-toplevel ipc ipc-rules join_views mag scale shortcuts-inhibit water wf-info winshadows winzoom workspace-names wsets zoom wobbly 
+# simple-tile
+plugins_nogl = alpha animate autostart autostart-static command pixdecor expo fast-switcher grid idle move oswitch place resize switcher vswitch window-rules wm-actions
 xwayland = true
 only_decorate_gtk = true
 focus_button_with_modifiers = false
@@ -64,11 +63,11 @@ send_to_back = <super> KEY_B | <super> KEY_D
 slot_l = <super> <shift> KEY_H | <alt> KEY_H
 slot_c = <super> <shift> KEY_K | <alt> KEY_K
 slot_r = <super> <shift> KEY_L | <alt> KEY_L
-# Restore default.
 restore = <super> <shift> KEY_J | <alt> KEY_J
 mouse_snap = false
 duration = 300
 type = crossfade
+
 # Alt-Esc default binding for moving between windows/tiles
 
 # Workspaces ───────────────────────────────────────────────────────────────────
@@ -80,46 +79,31 @@ binding_up = <super> KEY_K
 binding_right = <super> KEY_L
 wraparound = false
 # TODO
-# binding_last = 
+# binding_last =
 # duration = 300
 # gap = 20
-# send_win_down = 
-# send_win_last = 
-# send_win_left = 
-# send_win_right = 
-# send_win_up = 
-# with_win_last = 
+# send_win_down =
+# send_win_last =
+# send_win_left =
+# send_win_right =
+# send_win_up =
+# with_win_last =
 # move to a workspace directly, doesn't work so far
-binding_0 = <super> KEY_0
-binding_1 = <super> KEY_1
-binding_2 = <super> KEY_2
-binding_3 = <super> KEY_3
-binding_4 = <super> KEY_4
-binding_5 = <super> KEY_5
-binding_6 = <super> KEY_6
-binding_7 = <super> KEY_7
-binding_8 = <super> KEY_8
-binding_9 = <super> KEY_9
+#binding_0 = <super> KEY_0
+#binding_1 = <super> KEY_1
+#binding_2 = <super> KEY_2
+#binding_3 = <super> KEY_3
+#binding_4 = <super> KEY_4
+#binding_5 = <super> KEY_5
+#binding_6 = <super> KEY_6
+#binding_7 = <super> KEY_7
+#binding_8 = <super> KEY_8
+#binding_9 = <super> KEY_9
 
 [switcher]
-# Cycle through windows on workspae 
+# Cycle through windows on workspae
 next_view = <super> KEY_TAB
 prev_view = <super> <shift> KEY_TAB
-
-[simple-tile]
-keep_fullscreen_on_adjacent = true
-Break a tile into its own window, to maximize and on
-key_toggle = <super> KEY_I
-button_move = <super> BTN_LEFT
-button_resize = <super> BTN_RIGHT
-inner_gap_size = 5
-outer_horiz_gap_size = 0
-outer_vert_gap_size = 0
-tile_by_default = all
-key_focus_above = <super> <alt> KEY_K
-key_focus_below = <super> <alt> KEY_J
-key_focus_left = <super> <alt> KEY_H | <super> KEY_U
-key_focus_right = <super> <alt> KEY_L | <super> KEY_P
 
 [scale]
 # Show current windows exploded on current workspace (X) or entire desktop (Z), traverse with arrow keys
@@ -139,13 +123,35 @@ title_font_size = 22
 title_overlay = all
 title_position = center
 
+[scale-title-filter]
+bg_color = \#00000080
+case_sensitive = false
+font_size = 30
+overlay = true
+share_filter = false
+text_color = \#CCCCCCCC
+
+#[simple-tile]
+#keep_fullscreen_on_adjacent = true
+#Break a tile into its own window, to maximize and on
+#key_toggle = <super> KEY_I
+#button_move = <super> BTN_LEFT
+#button_resize = <super> BTN_RIGHT
+#inner_gap_size = 5
+#outer_horiz_gap_size = 0
+#outer_vert_gap_size = 0
+# default = all
+#key_focus_above = <super> <alt> KEY_K
+#key_focus_below = <super> <alt> KEY_J
+#key_focus_left = <super> <alt> KEY_H | <super> KEY_U
+#key_focus_right = <super> <alt> KEY_L | <super> KEY_P
+
 [window-rules]
-maximize_alacritty = on created if app_id is "Alacritty" then maximize
-maximize_lxterminal= on created if app_id is "lxterminal" then maximize
+# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
 # You can get the properties of your applications with the following command:
 # $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
-# See Window rules for a complete reference.
-# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
+maximize_alacritty = on created if app_id is "Alacritty" then maximize
+maximize_lxterminal= on created if app_id is "lxterminal" then maximize
 rule_001 = on created if app_id is "lxterminal" then set alpha 0.7
 rule_002 = on created if app_id is "Alacritty" then set alpha 0.75
 rule_003= on created if app_id is "firefox" then maximize
@@ -178,7 +184,7 @@ workspace_switch_after = -1
 
 # Zoom in the desktop by scrolling + Super.
 [zoom]
-modifier = <super> 
+modifier = <super>
 interpolation_method = 0
 smoothing_duration = 300
 speed = 0.010000
@@ -205,8 +211,8 @@ next_output_with_win = <super> <shift> KEY_O
 
 [idle]
 # -1 is disabled or set with number of seconds
-# screensaver_timeout = -1
-screensaver_timeout = 300
+screensaver_timeout = -1
+#screensaver_timeout = 300
 dpms_timeout = -1
 # dpms setting will turn off your display after a further number of seconds.
 # On Pi this move all windows to workspace 0 0 (or 1)
@@ -236,12 +242,11 @@ select_workspace_6 = KEY_6
 select_workspace_7 = KEY_7
 select_workspace_8 = KEY_8
 select_workspace_9 = KEY_9
-duration = 300
+duration = 700
 inactive_brightness = 0.700000
 keyboard_interaction = true
 offset = 10
-transition_length = 200
-
+transition_length = 500
 
 [scale-title-filter]
 bg_color = \#00000080
@@ -285,8 +290,8 @@ position = center
 show_option_names = false
 text_color = \#FFFFFFFF
 
-[place]
-mode = random
+#[place]
+#mode = random
 
 [preserve-output]
 last_output_focus_timeout = 10000
@@ -329,6 +334,8 @@ zoom_enabled_for = none
 # Alert: blur consumes system resources
 [blur]
 blur_by_default = type is "toplevel"
+# method is either bokeh, box, gaussian or kawase
+method = kawase
 bokeh_degrade = 1
 bokeh_iterations = 15
 bokeh_offset = 5.000000
@@ -341,6 +348,6 @@ gaussian_offset = 1.000000
 kawase_degrade = 8
 kawase_iterations = 2
 kawase_offset = 2.000000
-method = gaussian
 saturation = 1.000000
 toggle = none
+ 
