--- a/wayfire.ini
+++ b/wayfire.ini
@@ -1,6 +1,6 @@
-# By https://github.com/gnmearacaun/rpios-wayfirewm
-# Borrows from https://github.com/bluebyt/Wayfire-dots and that of Catchyos
-# It is amalgamated with Raspberry Pi OS default configs for Pi4 & Pi5 
+# Raspberry Pi OS (Bookworm) config for Pi4 & Pi5 
+# Inspired by https://github.com/bluebyt/Wayfire-dots and that of CatchyOS
+# Author: Briain O'Dricoll https://github.com/gnmearacaun/rpios-wayfirewmj
 
 #───────────────────────────────────────────────────────────────
 [command]
@@ -11,7 +11,7 @@ repeatable_binding_volume_down = KEY_VOLUMEDOWN
 command_volume_down = wfpanelctl volumepulse vold
 binding_mute = KEY_MUTE
 command_mute = wfpanelctl volumepulse mute
-binding_launcher= <super> KEY_R
+binding_launcher= <super> KEY_D
 command_launcher= wfpanelctl smenu menu
 binding_lxterminal = <super> KEY_T
 command_lxterminal = lxterminal
@@ -55,11 +55,11 @@ toggle_fullscreen = <super> <shift> KEY_F
 toggle_showdesktop = <super> <shift> KEY_D
 toggle_always_on_top = <super> KEY_Y
 toggle_sticky = <super> <shift> KEY_Y
-# Quickly cycle between applications, may need to press multiple times to regain focus as it seem to cycle focu through all windows
-send_to_back = <super> KEY_B | <super> KEY_D
+# Quickly cycle between applications, may need to press it an extra time to regain focus 
+send_to_back = <super> KEY_S | <super> KEY_B
 
 [grid]
-# Position the windows in certain regions of the output as tiles
+# Position the windows as tiles; left, center or right
 slot_l = <super> <shift> KEY_H | <alt> KEY_H
 slot_c = <super> <shift> KEY_K | <alt> KEY_K
 slot_r = <super> <shift> KEY_L | <alt> KEY_L
@@ -110,13 +110,13 @@ prev_view = <super> <shift> KEY_TAB
 toggle = <super> KEY_X
 toggle_all = <super> KEY_Z
 allow_zoom = false
-bg_color = \#1A1A1AE6
+# bg_color = \#1A1A1AE6
 duration = 400
-inactive_alpha = 0.750000
+inactive_alpha = 0.50000
 include_minimized = false
 interact = false
 middle_click_close = false
-minimized_alpha = 0.4500
+minimized_alpha = 0.4000
 spacing = 50
 text_color = \#CCCCCCFF
 title_font_size = 22
@@ -152,10 +152,10 @@ text_color = \#CCCCCCCC
 # $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
 maximize_alacritty = on created if app_id is "Alacritty" then maximize
 maximize_lxterminal= on created if app_id is "lxterminal" then maximize
-rule_001 = on created if app_id is "lxterminal" then set alpha 0.7
-rule_002 = on created if app_id is "Alacritty" then set alpha 0.75
+rule_001 = on created if app_id is "lxterminal" then set alpha 0.5
+rule_002 = on created if app_id is "Alacritty" then set alpha 0.5
 rule_003= on created if app_id is "firefox" then maximize
-rule_004= on created if app_id is "firefox" then set alpha 0.8
+rule_004= on created if app_id is "firefox" then set alpha 0.6
 rule_005= on created if app_id is "firefox" then assign_workspace 1 1
 rule_006= on created if app_id is "brave-browser-beta" then set alpha 1.0
 rule_007= on created if app_id is "brave-browser-beta" then assign_workspace 1 0
@@ -211,8 +211,8 @@ next_output_with_win = <super> <shift> KEY_O
 
 [idle]
 # -1 is disabled or set with number of seconds
-screensaver_timeout = -1
-#screensaver_timeout = 300
+# screensaver_timeout = -1
+screensaver_timeout = 300
 dpms_timeout = -1
 # dpms setting will turn off your display after a further number of seconds.
 # On Pi this move all windows to workspace 0 0 (or 1)
@@ -243,7 +243,7 @@ select_workspace_7 = KEY_7
 select_workspace_8 = KEY_8
 select_workspace_9 = KEY_9
 duration = 700
-inactive_brightness = 0.700000
+inactive_brightness = 0.600000
 keyboard_interaction = true
 offset = 10
 transition_length = 500
@@ -256,18 +256,18 @@ overlay = true
 share_filter = false
 text_color = \#CCCCCCCC
 
-[input]
-xkb_model = pc105
-xkb_layout = gb
-xkb_variant = altgr-intl
-xkb_options = grp:alt_shift_toggle
+# [input]
+# xkb_model = pc105
+# xkb_layout = gb
+# xkb_variant = altgr-intl
+# xkb_options = grp:alt_shift_toggle
 # xkb_rules = evdev
-cursor_size = 24
+# cursor_size = 24
 # cursor_theme = Graphite-dark-cursors
-kb_capslock_default_state = false
+# kb_capslock_default_state = false
 # kb_numlock_default_state = true
-kb_repeat_delay = 400
-kb_repeat_rate = 40
+# kb_repeat_delay = 400
+# kb_repeat_rate = 40
 
 # Misc  ───────────────────────────────────────────────────────────────
 
@@ -276,9 +276,9 @@ all_dialogs_modal = true
 app_id_mode = full
 dynamic_repaint_delay = false
 enable_so_unloading = false
-# force_preferred_decoration_mode = false
-# remove_output_limits = false
-# use_external_output_configuration = false
+force_preferred_decoration_mode = false
+remove_output_limits = false
+use_external_output_configuration = false
 
 [workspace-names]
 background_color = \#333333B3
@@ -290,8 +290,8 @@ position = center
 show_option_names = false
 text_color = \#FFFFFFFF
 
-#[place]
-#mode = random
+[place]
+mode = random
 
 [preserve-output]
 last_output_focus_timeout = 10000
@@ -314,19 +314,19 @@ focus_delay = 50
 raise_on_top = true
 threshold = 10
 
-# [wobbly]
-# friction = 3.000000
-# grid_resolution = 6
-# spring_k = 8.000000
+[wobbly]
+friction = 3.000000
+grid_resolution = 6
+spring_k = 8.000000
 
 [animate]
+# open_animation = zoom
+open_animation = fade
 close_animation = fade
 duration = 400
 enabled_for = (type equals "toplevel" | (type equals "x-or" & focusable equals true))
 fade_duration = 800
 fade_enabled_for = type equals "overlay"
-open_animation = zoom
-# open_animation = fade
 startup_duration = 600
 zoom_duration = 500
 zoom_enabled_for = none
@@ -345,7 +345,7 @@ box_offset = 1.000000
 gaussian_degrade = 1
 gaussian_iterations = 2
 gaussian_offset = 1.000000
-kawase_degrade = 8
+kawase_degrade = 3
 kawase_iterations = 2
 kawase_offset = 2.000000
 saturation = 1.000000
